feat(home): fetch data from API, fix UI issues, and add sidebar

--- a/src/assets/styles/GlobalStyle.scss
+++ b/src/assets/styles/GlobalStyle.scss
@@ -25,6 +25,9 @@ ol {
   list-style: none;
 }
 
-.MuiPickersOutlinedInput-root {
-  border: 1px solid #fff !important;
+body,
+html {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
