--- a/src/assets/styles/GlobalStyle.scss
+++ b/src/assets/styles/GlobalStyle.scss
@@ -31,3 +31,29 @@ html {
   padding: 0;
   overflow: hidden;
 }
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #444;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper {
+  margin-left: auto;
+  margin-right: auto;
+}
