--- a/src/assets/styles/GlobalStyle.scss
+++ b/src/assets/styles/GlobalStyle.scss
@@ -57,3 +57,13 @@ html {
   margin-left: auto;
   margin-right: auto;
 }
+@keyframes bounce {
+  0%,
+  80%,
+  100% {
+    transform: scale(0);
+  }
+  40% {
+    transform: scale(1);
+  }
+}
